# image_search

./: .gitignore  CLAUDE.md  FRONTEND_IMPLEMENTATION_PLAN.md  LICENSE  MVP_PLAN.md  PHASE0_CONTRACTS.md  README.md  SYSTEM_DESIGN_SUMMARY.md  design.md  pyproject.toml  session  smoke_test_vlm.py
.claude/: settings.local.json
dataset/: add_exif_data.py  add_exif_data_fixed.py  add_exif_to_demo_data.py  check_and_add_exif.py
docs/: api.md  architecture.md  backend.md  configuration.md  database.md  frontend.md  ingestion.md  models.md  product.md  session  ui.md  vector_store.md
frontend/: README.md  package-lock.json  package.json  vite.config.ts
frontend/src/: App.module.css  App.tsx  api.test.ts  api.ts  config.ts  index.css  types.ts
frontend/src/components/: AgentLog.module.css  AgentLog.test.tsx  AgentLog.tsx  ImageCard.module.css  ImageCard.tsx  ImageLightbox.module.css  ImageLightbox.tsx  IngestCard.module.css  IngestCard.tsx  IngestPanel.module.css  IngestPanel.tsx  LLMPanel.module.css  LLMPanel.test.tsx  LLMPanel.tsx  LibraryPanel.tsx  (+7 more)
src/image_search_app/: __init__.py  config.py  db.py  schemas.py
tests/: conftest.py  test_api_frontend_routes.py  test_caption_refinement.py  test_captioner.py  test_chroma_store.py  test_embeddings.py  test_exif.py  test_faces.py  test_filters.py  test_intent_parser.py  test_library.py  test_model_paths.py  test_noop_search.py  test_pipeline_integration.py  test_query_preprocess.py  test_search_agent.py  test_search_improvements.py  test_search_recall.py  test_time_parser.py  test_vlm_caption_refine_integration.py
(+30 files in other folders)
